avicii: Relocate config_maxVisibleNotificationIcons* overlay to proper directory
* Also fix copyright header.

Change-Id: I786072934b29a75ec4ab14d77564c1d220900e7b

--- a/overlay-bliss/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay-bliss/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -22,4 +22,9 @@
 <resources>
     <!-- Color of the UDFPS Pressed view -->
     <color name="config_udfpsColor">#ccccac</color>
+
+    <!-- Max visible notification icons -->
+    <integer name="config_maxVisibleNotificationIcons">6</integer>
+    <integer name="config_maxVisibleNotificationIconsWhenDark">7</integer>
+
 </resources>
